<resources>
    <string name="app_name">Kinopoisk App</string>
    <string name="genreYear">"%1$s (%2$s)"</string>

    <string name="fileName">"%1$d.jpeg"</string>

    <string name="populars">"Популярные"</string>
    <string name="favourites">"Избранное"</string>
    <string name="profile">"Профиль"</string>
    <string name="search">"search"</string>

    <string name="genre">"Жанры: "</string>
    <string name="countries">"Страны: "</string>
    <string name="notFound">"Не найдено"</string>
    <string name="networkError">"Произошла ошибка при загрузке данных, проверьте подключение к сети"</string>
    <string name="retry">"Повторить"</string>
    <string name="film_image">film image</string>
    <string name="ivan_petrushin">Иван Петрушин</string>
    <string name="genre_fav">Любимый жанр: Фантастика</string>
    <string name="films_watched">Просмотрено фильмов: 20</string>
    <string name="profile_description">Люблю кино во всех жанрах — от комедий до хорроров. Могу пересматривать «Унесённых призраками» и тут же увлечься в триллером или психологическим ужастиком. Главное — атмосфера и сильная история.</string>
    <string name="profile_favourite_film">Любимый фильм: Чужой</string>
    <string name="login">Вход</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="sign_up">Регистрация</string>
    <string name="username">Имя пользователя</string>
    <string name="register">Регистрация</string>
</resources>